base/longhorn/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: longhorn-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    # type of authentication
    nginx.ingress.kubernetes.io/auth-type: basic
    # name of the secret that contains the user/password definitions
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    # message to display with an appropriate context why the authentication is required
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required '
spec:
  rules:
    - host: longhorn.rappet.xyz
      http:
        paths:
          - backend:
              serviceName: longhorn-frontend
              servicePort: 80
# TODO: Fix Longhorn's API which is not able to operate using https
#  tls:
#    - hosts:
#        - longhorn.rappet.xyz
#      secretName: longhorn-ingress-cert
